--- a/src/commponents/Users/Users.module.css
+++ b/src/commponents/Users/Users.module.css
@@ -10,9 +10,10 @@
 }
 
 .userPhoto{
-    width: 50px;
-    height: 50px;
+    width: 95px;
+    height: 95px;
     border-radius: 100%;
+    margin: 5px;
 }
 
 .button button{
@@ -34,4 +35,20 @@
 }
 .button button:hover{
     background-color: #444445;
+}
+.UserContainer{
+    display: flex;
+    border-bottom: 2px solid #2B2B2B;
+}
+.UserContainer:nth-last-child(-n+1){
+    border-bottom: none;
+}
+.UserName{
+    margin-top: 10px;
+    margin-bottom: 28px;
+    font-size: 18px;
+}
+.UserName:hover{
+    cursor: pointer;
+    text-decoration:  underline;
 }
