--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -1,7 +1,3 @@
-.Kartinka{
-    width: 100%;
-    height: 150px;
-    background-color: #3D3D3D;
-    border-radius:20px 20px 0px 0px;
-    
+.mainFoto{
+    max-width: 200px;
 }
