--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,19 @@
 
 .app-wrapper{
-  display: grid;
-  width: 1100px;
-  margin: 0 auto;
-
-grid-template-areas: 
-  "h h"
-  "n c"
-;
-
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 10px; 
+ width: 1000px;
+ margin: 0 auto;
 }
-.app-wrapper-content {
+/* .app-wrapper-content {
   grid-area: c;
   background-color: #1F1F1F;
   border-radius: 20px;
   color: white;
   box-shadow: 0px 0px 2px wheat;
+} */
+.header{
+
+}
+.nav{
+
 }
 
