--- a/src/commponents/Navbar/Navbar.module.css
+++ b/src/commponents/Navbar/Navbar.module.css
@@ -1,5 +1,4 @@
 .nav {
-  grid-area: n;
   background-color: #1F1F1F;
   color:#B3B3B3;
   padding: 10px;
@@ -7,12 +6,14 @@
   box-shadow: 0px 0px 2px wheat;
   border-radius: 20px;
   height: 300px;
-  }
+  width: 170px;
+  float: left;
+  margin-right: 20px;
+}
 a{
   color:#B3B3B3;
   text-decoration: none;
   font-family: Arial;
-  
 }
 .nav a :hover{
   background-color: #3D3D3D;
