--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -1,6 +1,49 @@
 .mainFoto{
-    max-width: 200px;
+    max-width: 210px;
+    box-shadow: 0px 0px 2px wheat;
+    padding: 15px;
+    border-radius: 20px;
+    background-color: #1F1F1F;
 }
 .contact{
     margin-left: 15px;
+}
+.NewPhoto{
+  
+}
+
+.ProfileDataForm{
+    display: flex;
+    flex-direction: column;
+
+    box-shadow: 0px 0px 2px wheat;
+    border-radius: 20px;
+    background-color: #1F1F1F;
+    padding: 15px;
+    z-index: 0;
+
+    width: 500px;
+    position: relative;
+    top: -267px; left: 260px;
+    color: red;
+}
+.ProfileDataForm b {
+    color: #848484;
+}
+.Top{
+    border-bottom: 1px solid #2B2B2B;
+    color: #EBEBEB;
+    font-size: 19px;
+    font-family:Arial;
+    width: 100%;
+    padding-bottom: 30px;
+}
+.Content{
+    border-bottom: 1px solid #2B2B2B;
+}
+.profileStatus{
+    position: relative;
+    top: 0px; left: 200px;
+    color: ivory;
+    z-index: 2;
 }
