--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -8,10 +8,6 @@
 .contact{
     margin-left: 15px;
 }
-.NewPhoto{
-  
-}
-
 .ProfileDataForm{
     display: flex;
     flex-direction: column;
@@ -20,7 +16,7 @@
     border-radius: 20px;
     background-color: #1F1F1F;
     padding: 15px;
-    z-index: 0;
+    z-index: -1;
 
     width: 500px;
     position: relative;
@@ -31,6 +27,8 @@
     color: #848484;
 }
 .Top{
+    display: flex;
+    justify-content: space-between;
     border-bottom: 1px solid #2B2B2B;
     color: #EBEBEB;
     font-size: 19px;
@@ -38,12 +36,36 @@
     width: 100%;
     padding-bottom: 30px;
 }
+.Top span {
+    font-size: 14px;
+    color: #9D9D9D;
+}
 .Content{
     border-bottom: 1px solid #2B2B2B;
 }
+.profileStatus:hover{
+    background-color: #2B2B2B;
+}
 .profileStatus{
     position: relative;
-    top: 0px; left: 200px;
+    top: -204px; left: 22px;
     color: ivory;
-    z-index: 2;
+    z-index: 1;
+    display: inline-block;
+    width: 498px;
+    text-align: left;
+    cursor: pointer;
+    height: 25px;
+}
+
+.ProfileStatusActiv input{
+    border: none;
+    background-color: #2B2B2B;
+    color: #EBEBEB;
+    width: 494px;
+    border-radius: 0px;
+    outline:none;
+    font-size: 16px;
+    height: 15px;
+    height: 24px;
 }
