--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -32,10 +32,7 @@
     background-color: #1F1F1F;
     color: #848484;
 }
-.NewPhotoText :hover{
-    color: white;
-    box-shadow: 0px 0px 2px rgb(252, 242, 223);
-}
+
 .Kartinka input[type='file']{
     display: none;
 }
@@ -74,7 +71,7 @@
     background-color: #1F1F1F;
     color: #848484;
 }
-.ProfileData button:hover{
+.ProfileData button:hover, .NewPhotoText:hover{
     color: white;
     box-shadow: 0px 0px 2px rgb(252, 242, 223);
 }
