--- a/src/commponents/Profile/MyPosts/MyPosts.module.css
+++ b/src/commponents/Profile/MyPosts/MyPosts.module.css
@@ -1,33 +1,29 @@
-.sssNewPost {
-  width: 250px;
-  box-shadow: 0px 0px 2px wheat;
-  padding: 10px;
-  margin: 10px;
- 
-  text-align:center;
+.container{
+
 }
-.sssNewTextarea textarea {
-  width: 200px;
-  height: 50px;
-  box-sizing: border-box;
-  background-color: #3d3d3d;
-  resize: none;
-  margin: 0;
-  padding: 5px;
-  color: wheat;
+.AddNewPostForm{
+    display: flex;
+    background-color:#1F1F1F;
+
+    border: 1px solid red;
+    width: 532px;
+    height: 100px;
+    border-radius: 15px;
+
+    position: relative;
+    top: 20px; left: 470px;
 }
-.sssNewButton button {
-  box-sizing: border-box;
-  border: 0;
-  width: 200px;
-  height: 23px;
-  margin: 0;
-  padding: 0;
-  background-color: #333333;  
-  color: #F5D7E1;
+.miniManePhoto{
+    width: 52px;
 }
-.sssNewButton button:hover {
-    background-color: #4F4F4F;
-    cursor: pointer;
-    color: wheat;
+.AddNewPostForm textarea{
+    background-color:#1F1F1F;
+    width: 480px;
+    height: 80px;
+    border-radius: 15px;
+    border: none;
+    resize: none;
+    padding: 7px;
+
+    
 }
