--- a/src/commponents/Profile/MyPosts/MyPosts.module.css
+++ b/src/commponents/Profile/MyPosts/MyPosts.module.css
@@ -3,27 +3,37 @@
 }
 .AddNewPostForm{
     display: flex;
-    background-color:#1F1F1F;
+    align-items: center;
 
-    border: 1px solid red;
+    background-color:#1F1F1F;
+    /* border: 1px solid red; */
     width: 532px;
-    height: 100px;
-    border-radius: 15px;
+    height: 50px;
+    border-radius: 25px;
+    padding-left: 15px;
 
     position: relative;
     top: 20px; left: 470px;
 }
-.miniManePhoto{
-    width: 52px;
+.miniManePhoto {
+    /* width: 52px; */
+
+}
+.miniManePhoto img{
+    width: 30px;
+    border-radius: 100%;
+    margin: 0;
+
 }
 .AddNewPostForm textarea{
     background-color:#1F1F1F;
-    width: 480px;
-    height: 80px;
+    width: 455px;
+    /* height: 100%; */
     border-radius: 15px;
     border: none;
     resize: none;
-    padding: 7px;
-
-    
+    padding: 10px 0px 0px 10px;
+    border: 1px solid green;
+    margin: 0;
+    cursor: pointer;
 }
