Навёл немного суеты в Header

--- a/src/commponents/Profile/Profileinfo/ProfileDataForm.module.css
+++ b/src/commponents/Profile/Profileinfo/ProfileDataForm.module.css
@@ -40,7 +40,7 @@
 }
 .Data textarea{
     height: 50px;
-    resize:none;
+    resize:none; /*указывает, может ли размер элемента изменяться пользователем.*/
 }
 .button button{
     width: 100%;
