--- a/src/commponents/Header/Header.module.css
+++ b/src/commponents/Header/Header.module.css
@@ -1,16 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=M+PLUS+2:wght@200&family=Space+Mono&display=swap');
+
 .header {
-    grid-area: h;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+
     background-color: #1F1F1F;
     border-radius:0px 0px 20px 20px;
     box-shadow: 0px 0px 2px wheat;
     margin-bottom: 15px;
 }
 .header img {
-    width: 40px;
+    width: 35px;
     border-radius:50px;
-    margin: 10px 0 0 10px;
+    margin-right: 5px;
+}
+.Ugolok{
+    width: 0; 
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid #717171;
+}
+.Ugolok:hover{
+    border-top: 10px solid rgb(199, 199, 199);
+}
+.header button{
+
+}
+.Logo{
+    display: flex;
+    align-items: center;
+
+    font-family: 'Arvo', serif;
+    font-size: 25px;
+    color: #24A2A1;
+
+}
+.Logo svg{
+    fill: #D80540;
+}
+.LogoSVG{
+    width: 50px;
+    margin-right: 7px;
 }
 .loginBlock{
     float: right;
     color: aqua;
+}
+.HeaderRigth{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
