--- a/src/commponents/Profile/MyPosts/MyPosts.module.css
+++ b/src/commponents/Profile/MyPosts/MyPosts.module.css
@@ -6,11 +6,15 @@
     align-items: center;
 
     background-color:#1F1F1F;
-    /* border: 1px solid red; */
-    width: 532px;
+    box-shadow: 0px 0px 2px rgb(252, 242, 223);
+
+    width: 515px;
     height: 50px;
     border-radius: 25px;
-    padding-left: 15px;
+    padding: 3px 0px 0px 15px;
+    font-size: 15px;
+    min-height: 50px;
+    max-height: 100px;
 
     position: relative;
     top: 20px; left: 470px;
@@ -23,17 +27,19 @@
     width: 30px;
     border-radius: 100%;
     margin: 0;
-
 }
 .AddNewPostForm textarea{
     background-color:#1F1F1F;
     width: 455px;
-    /* height: 100%; */
     border-radius: 15px;
+    padding: 15px 0px 0px 10px;
+    font-size: 15px;
+
+    resize:none; /*указывает, может ли размер элемента изменяться пользователем.*/
+    outline: none;  /*Уберает подсветку у textaria*/
     border: none;
-    resize: none;
-    padding: 10px 0px 0px 10px;
-    border: 1px solid green;
-    margin: 0;
-    cursor: pointer;
+    color: #B3B3B3;
+    
+    min-height: 30px;
+    max-height: 100px;
 }
