--- a/src/commponents/Profile/MyPosts/Post/Post.module.css
+++ b/src/commponents/Profile/MyPosts/Post/Post.module.css
@@ -1,10 +1,12 @@
-.item {
+.Post{
     color:grey;
+
+    box-shadow: 0px 0px 2px wheat;
+    border-radius: 15px;
 }
 
-.avatar {
+.postAvatar img{
     width: 50px;
     height: 50px;
-    border-radius: 30px;
-    background-color:indianred;
+    border-radius: 100%;
 }
