--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -10,7 +10,7 @@
 .Kartinka, .ProfileBoxFriends{
     align-self: flex-start;
     width: 210px;
-    height: 250px;
+    max-height: 250px;
     box-shadow: 0px 0px 2px wheat;
     padding: 15px;
     border-radius: 20px;
@@ -18,7 +18,9 @@
     
 }
 .ProfileBoxFriends{
-    margin-top: -108px;
+    position: relative;
+    top: -110px; left: 0px;
+    height: 250px;
 }
 .Kartinka img{
     border-radius: 10px;
