--- a/src/commponents/Dialogs/Dialogs.module.css
+++ b/src/commponents/Dialogs/Dialogs.module.css
@@ -1,3 +1,11 @@
+.dialogs{
+    display: flex;
+    flex-direction: column;
+    background-color: #1F1F1F;
+    border-radius: 20px;
+    box-shadow: 0px 0px 2px wheat;
+
+}
 .PoiskovickDialogs textarea{
     width: 100%;
     height:40px;
@@ -20,3 +28,4 @@
 /* .dialogs{
     width: 500px;
 } */
+
