--- a/src/commponents/Profile/MyPosts/Post/Post.module.css
+++ b/src/commponents/Profile/MyPosts/Post/Post.module.css
@@ -20,6 +20,7 @@
     padding-left: 15px;
     color: #F53838;
     cursor: pointer;
+    font-size: 15px;
 }
 .fullName:hover{
     text-decoration:underline;
