--- a/src/commponents/Header/Header.module.css
+++ b/src/commponents/Header/Header.module.css
@@ -17,7 +17,11 @@
     border-radius:50px;
     margin-right: 5px;
 }
-
+.currentTime{
+    color:rgb(252, 242, 223);
+    font-size: 20px;
+    font-family: 'Arvo', serif;
+}
 .header button{
 
 }
