--- a/src/commponents/Dialogs/Dialogs.module.css
+++ b/src/commponents/Dialogs/Dialogs.module.css
@@ -7,7 +7,34 @@
 
 }
 
-/* .dialogs{
-    width: 500px;
-} */
+.AddMessageForm button{
+    width: 100%;
+    margin-top: 7px;
+    padding-bottom: 5px;
+    font-family: 'Space Mono', monospace;
+    font-size: 15px;
+    cursor: pointer;
+    box-shadow: 0px 0px 2px wheat;
+    border: none;
+    background-color: #1F1F1F;
+    color: #848484;
+}
+.AddMessageForm button:hover{
+    color: white;
+    box-shadow: 0px 0px 2px rgb(252, 242, 223);
+}
+.AddMessageForm textarea{
+    border: none;
+    box-shadow: 0px 0px 2px wheat;
 
+    background-color: #2B2B2B;
+    color: #EBEBEB;
+    width: 100%;
+    border-radius: 0px;
+    outline:none;
+    resize: none;
+    font-size: 14px;
+    height: 24px;
+    line-height: 24px;
+    font-family: 'Space Mono', monospace;
+}
