--- a/src/commponents/Dialogs/Dialogs.module.css
+++ b/src/commponents/Dialogs/Dialogs.module.css
@@ -9,7 +9,7 @@
 
 .AddMessageForm button{
     width: 100%;
-    margin-top: 7px;
+    /* margin-top: 7px; */
     padding-bottom: 5px;
     font-family: 'Space Mono', monospace;
     font-size: 15px;
@@ -29,7 +29,7 @@
 
     background-color: #2B2B2B;
     color: #EBEBEB;
-    width: 100%;
+    width: 785px;
     border-radius: 0px;
     outline:none;
     resize: none;
