--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,5 @@
 
 .app-wrapper{
- width: 1000px;
- margin: 0 auto;
+ justify-content: center;
 }
-/* .app-wrapper-content {
-  grid-area: c;
-  
- 
-  border-radius: 20px;
-  color: white;
-  box-shadow: 0px 0px 2px wheat;
-} */
-
 
