--- a/src/commponents/Navbar/Navbar.module.css
+++ b/src/commponents/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-.nav {
+/* .nav {
   background-color: #1F1F1F;
   color:#B3B3B3;
   padding: 10px;
@@ -8,7 +8,7 @@
   width: 170px;
   float: left;
   margin-right: 20px;
-}
+} */
 a{
   color:#B3B3B3;
   text-decoration: none;
