--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -27,25 +27,27 @@
     border-radius: 10px;
 }
 .NewPhotoText{
-    display: inline-block;
+    /* display: block; */
     text-align: center;
     padding-bottom: 5px;
-    margin-top: 7px;
-    width: 210px;
+    /* margin-top: 7px; */
+    /* width: 100%; */
     font-family: 'Space Mono', monospace;
     font-size: 15px;
     cursor: pointer;
     box-shadow: 0px 0px 2px wheat;
-
+    line-height: 200%;
     background-color: #1F1F1F;
     color: #848484;
+    border-radius: 8px;
 }
 
-.Kartinka input[type='file']{
+.NewPhoto input[type='file']{
     display: none;
 }
 .mainFoto{
-    max-width: 210px;
+    width: 100%;
+    border-radius: 8px;
 }
 .contact{
     margin-left: 15px;
