--- a/src/commponents/Profile/MyPosts/MyPosts.module.css
+++ b/src/commponents/Profile/MyPosts/MyPosts.module.css
@@ -1,54 +1,37 @@
-.container{
-
-}
 .AddNewPostForm{
-    display: flex;
-    flex-wrap: wrap;
 
-    background-color:#1F1F1F;
     box-shadow: 0px 0px 2px rgb(252, 242, 223);
 
-    width: 515px;
-    height: 70px;
+    width: 100%;
     margin-top: 18px;
     border-radius: 25px;
-    padding: 15px 0px 10px 15px;
+    padding: 10px 0px 10px 0px;
     font-size: 15px;
-    min-height: 50px;
-    max-height: 100px;
 }
-.miniManePhoto {
-    /* width: 52px; */
 
-}
-.miniManePhoto img{
+.AddNewPostForm img{
     width: 35px;
     border-radius: 100%;
     margin: 0;
 }
 .AddNewPostForm textarea{
-    background-color:#1F1F1F;
-    width: 455px;
-    /* height: 45px; */
-    border-radius: 15px;
-    padding: 5px 0px 0px 10px;
-    font-size: 15px;
 
+    width: 100%;
+    font-size: 15px;
+    /* background-color:#848484; */
     resize:none; /*указывает, может ли размер элемента изменяться пользователем.*/
     outline: none;  /*Уберает подсветку у textaria*/
     border: none;
-    color: #B3B3B3;
+    /* color: black; */
 }
 .AddNewPostForm button{
+    /* width: 100%; */
     padding-bottom: 5px;
     font-family: 'Space Mono', monospace;
-    font-size: 15px;
+    font-size: 1em;
     cursor: pointer;
     box-shadow: 0px 0px 2px wheat;
     border: none;
-    background-color: #1F1F1F;
-    color: #848484;
-    margin-left: 385px;
 }
 .AddNewPostForm button:hover{
     color: white;
