--- a/src/commponents/Profile/Profileinfo/Profileinfo.module.css
+++ b/src/commponents/Profile/Profileinfo/Profileinfo.module.css
@@ -27,7 +27,7 @@
     border-radius: 10px;
 }
 .NewPhotoText{
-    /* display: block; */
+    display: block;
     text-align: center;
     padding-bottom: 5px;
     /* margin-top: 7px; */
@@ -37,18 +37,15 @@
     cursor: pointer;
     box-shadow: 0px 0px 2px wheat;
     line-height: 200%;
-    background-color: #1F1F1F;
-    color: #848484;
+    /* background-color: #1F1F1F; */
+    /* color: #848484; */
     border-radius: 8px;
 }
 
 .NewPhoto input[type='file']{
     display: none;
 }
-.mainFoto{
-    width: 100%;
-    border-radius: 8px;
-}
+
 .contact{
     margin-left: 15px;
 }
@@ -58,9 +55,10 @@
 
     box-shadow: 0px 0px 2px wheat;
     border-radius: 20px;
-    background-color: #1F1F1F;
-    padding: 15px;
-    width: 500px;
+    /* background-color: #1F1F1F; */
+    padding: 2.4%;
+    /* width: 500px; */
+    width: 95%;
     
     font-size: 13px;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -78,98 +76,14 @@
     cursor: pointer;
     box-shadow: 0px 0px 2px wheat;
     border: none;
-    background-color: #1F1F1F;
-    color: #848484;
 }
 .ProfileData button:hover, .NewPhotoText:hover{
     color: white;
     box-shadow: 0px 0px 2px rgb(252, 242, 223);
 }
-.ProfileData_Top{
-    border-bottom: 1px solid #2B2B2B;
-    color: #EBEBEB;
-    font-size: 19px;
-    font-family:Arial;
-    padding: 7px 0px 5px 0px;
-}
-.ProfileData_Top span {
-    font-size: 14px;
-    color: #9D9D9D;
-}
-.ProfileData_NameAndOnline{
-    display: flex;
-    justify-content: space-between;
-}
-/* СТАТУС */
-.ProfileStatus{
-    color: #EBEBEB;
-    cursor: pointer;
-    width: 500px;
-    height: 26px; 
-    font-size: 14px;
-    line-height: 26px;
-    padding-left: 2px;
-    font-family: 'Space Mono', monospace;
-    letter-spacing: 1px;
-}
-.ProfileStatus:hover{
-    background-color:#2B2B2B;
-}
 
-.ProfileStatusActiv input{
-    border: none;
-    box-shadow: 0px 0px 2px wheat;
 
-    background-color: #2B2B2B;
-    color: #EBEBEB;
-    width: 496px;
-    border-radius: 0px;
-    outline:none;
-    font-size: 14px;
-    height: 24px;
-    line-height: 24px;
-    font-family: 'Space Mono', monospace;
-    letter-spacing: 1px;
-    
-} 
-.ProfileStatusDisable:hover{
-    background-color: none;
-    cursor: text;
-}
-.ProfileData_Content{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #2B2B2B;
-    padding-top: 15px ;
-}
-.ProfileData_ContentName{
-    width: 40%;
-    color: #858585;
-}
-.ProfileData_ContentData{
-    width: 60%;
-    color: #F53838;
-}
-.ProfileData_ContentName div, .ProfileData_ContentData div{
-    margin-bottom: 15px;
-}
-.ProfileDataFooter {
-    padding-top: 10px;
-}
-.Contact{
-    display: flex;
-    justify-content: space-between;
-}
-.contactTitle{
-    color: #F53838;
-    width: 20%;
-    padding-left: 60px;
-    margin-bottom: 3px;
-}
-.contactValue{
-    color: beige;
-    width: 80%;
-}
-.contactValue:hover{
-    text-decoration:  underline;
-}
+
+
+
+
