--- a/src/commponents/Profile/Profileinfo/ProfileDataForm/ProfileDataForm.module.css
+++ b/src/commponents/Profile/Profileinfo/ProfileDataForm/ProfileDataForm.module.css
@@ -27,7 +27,7 @@
 .Data input, .Data textarea, .contact input{
     border: 1px solid #2B2B2B;
     height: 30px;
-    background-color: #1F1F1F;
+    background-color: #bbbbbb;
     color: #717171;
     font-size: 13px;
     font-family: 'Space Mono', monospace;
@@ -36,33 +36,17 @@
     outline: none;
 }   
 .Data input:focus, .Data textarea:focus, .contact input:focus{
-    color: #9D9D9D;
+    color: white;
 }
 .Data textarea{
     height: 50px;
     resize:none; /*указывает, может ли размер элемента изменяться пользователем.*/
 }
-.button button{
-    width: 100%;
-    margin-top: 7px;
-    padding-bottom: 5px;
-    font-family: 'Space Mono', monospace;
-    font-size: 15px;
-    cursor: pointer;
-    box-shadow: 0px 0px 2px wheat;
-    border: none;
-    background-color: #1F1F1F;
-    color: #848484;
-}
-.button button:hover, .NewPhotoText:hover{
-    color: white;
-    box-shadow: 0px 0px 2px rgb(252, 242, 223);
-}
 
 .contact{
     display: flex;
     justify-content:space-between;
-
+    
     color: #717171;
     font-size: 13px;
 } 
