--- a/src/commponents/Users/Users.module.css
+++ b/src/commponents/Users/Users.module.css
@@ -2,15 +2,15 @@
     display: flex;
     justify-content:space-between;
 }
-.userContainer{
-    display: flex;
-    flex-direction: column;
 
-    width: 70%;
-    box-shadow: 0px 0px 2px wheat;
-    background-color: #1F1F1F;
-    /* padding: 15px; */
-    border-radius: 20px;
+.UserElem{
+    display: flex;
+    border-bottom: 1px solid #2B2B2B;
+    margin: 0px 15px;
+    
+}
+.UserElem:nth-last-child(-n+1){
+    border-bottom: none;
 }
 .spisok{
     width: 800px;
@@ -50,14 +50,7 @@
 .button button:hover{
     background-color: #444445;
 }
-.UserContainer{
-    display: flex;
-    border-bottom: 1px solid #2B2B2B;
-    margin: 0px 15px;
-}
-.UserContainer:nth-last-child(-n+1){
-    border-bottom: none;
-}
+
 .UserName{
     margin-top: 10px;
     margin-bottom: 28px;
