--- a/src/commponents/Dialogs/InputField/InputField.module.css
+++ b/src/commponents/Dialogs/InputField/InputField.module.css
@@ -1,9 +1,9 @@
 .form {
-    margin-top: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    /* gap: 10px; */
 }
 
 .input {
@@ -16,9 +16,11 @@
     resize: vertical;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    font-size: 14px;
-    padding: 5px 0px 6px 10px;
+    font-size: 15px;
+    padding: 13px 0px 14px 10px;
     color: var(--font-grey);
+    /* padding: ''; */
+    /* background-color: #1f1f1f; */
 }
 
 .button {
