--- a/src/commponents/Users/Users.module.css
+++ b/src/commponents/Users/Users.module.css
@@ -28,7 +28,7 @@
 
 .UserName{
     margin-top: 10px;
-    margin-bottom: 28px;
+    /* margin-bottom: 28px; */
     font-size: 15px;
     color: #F53838;
     font-family: Arial;
