--- a/src/commponents/Profile/SendMessage/SendMessage.module.css
+++ b/src/commponents/Profile/SendMessage/SendMessage.module.css
@@ -8,7 +8,7 @@
 
 .input {
     padding: 0;
-    width: 230px;
+    width: 100%;
     height: 20px;
     border: none;
     outline: none;
@@ -30,9 +30,10 @@
 }
 
 .sendBtn {
-    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .cancelBtn {
-    margin-left: 5px;
+    cursor: pointer;
 }
